<b><u> v2.07, xx.xx.2016</b></u>
<font color=#FF8C00>&#9830;</font> QuestTracker: Color the Quest by difficulty.

<b><u> v2.06, 30.07.2016</b></u>
<font color=#FF8C00>&#9830;</font> Add a LocationPanel. All credits belong to Darth Predator (Shadow&Light).
<font color=#FF8C00>&#9830;</font> Add a Achievement status in tooltip. Based on Enhanced Achievements.
<font color=#FF8C00>&#9830;</font> Code cleanup.
<font color=#FF8C00>&#9830;</font> Changed specswitch datatext to change spec immediately, no need for a popup.

<b><u> v2.05, 29.07.2016</b></u>
<font color=#FF8C00>&#9830;</font> Install: Fix Datatexts if ElvUI_SLE is enabled.
<font color=#FF8C00>&#9830;</font> Misc: Attempt to fix a weird nil error.
<font color=#FF8C00>&#9830;</font> Skins: Add quest level to the ObjectiveTracker.

<b><u> v2.04, 28.07.2016</b></u>
<font color=#FF8C00>&#9830;</font> Add an inGame Changelog (thx Blazeflack for helping me).
<font color=#FF8C00>&#9830;</font> Install: Enable AB3 + 5 better safe than sorry.
<font color=#FF8C00>&#9830;</font> Install: Change the goldformat to 'CONDENSED'.
<font color=#FF8C00>&#9830;</font> Install: Switch Datatext position of S&L Currency + MUI System.
<font color=#FF8C00>&#9830;</font> Remove fix for blank tooltip. Part of ElvUI now.
<font color=#FF8C00>&#9830;</font> Skins: Update quest skin.

<b><u> v2.03, 25.07.2016</b></u>
<font color=#FF8C00>&#9830;</font> Remove GameMenu Button. (ElvUI's Button is enough)
<font color=#FF8C00>&#9830;</font> Fix a lua error in speccswitch datatext if there is no texture selected. (<a href="http://git.tukui.org/Merathilis/ElvUI_MerathilisUI/issues/15">#15</a>)
<font color=#FF8C00>&#9830;</font> Install: Add missing settings for ActionBar6. (damn it)
<font color=#FF8C00>&#9830;</font> Skins: Delete skining of SLE, will be part in BenikUI.
<font color=#FF8C00>&#9830;</font> Skins: Add skins for gossip frame & quest frame (taken from AddOnSkins)

<b><u> v2.02, 24.07.2016</b></u>