@@ -1,4 +1,5 @@
 <b><u> v2.07, xx.xx.2016</b></u>
+<font color=#FF8C00>&#9830;</font> Install: Adjust the ActionBar layout.
 <font color=#FF8C00>&#9830;</font> QuestTracker: Color the Quest by difficulty.
 
 <b><u> v2.06, 30.07.2016</b></u>
